<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="ru.lectorvin.bulls.MainActivity">

    <ImageButton
        android:id="@+id/plus0"
        android:contentDescription="@string/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="310sp"
        android:layout_marginTop="35sp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus"
        android:background="@android:color/white" />

    <ImageButton
        android:id="@+id/minus0"
        android:contentDescription="@string/minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="@id/plus0"
        app:layout_constraintTop_toBottomOf="@id/plus0"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/minus"
        android:scaleType="fitCenter"
        android:background="@android:color/white" />

    <ImageButton
        android:id="@+id/plus1"
        android:contentDescription="@string/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/plus0"
        app:layout_constraintLeft_toRightOf="@id/plus0"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/plus"
        android:scaleType="fitCenter"
        android:background="@android:color/white"/>

    <ImageButton
        android:id="@+id/minus1"
        android:contentDescription="@string/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/plus1"
        app:layout_constraintLeft_toRightOf="@id/minus0"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50sp"
        app:srcCompat="@drawable/minus"
        android:scaleType="fitCenter"
        android:background="@android:color/white"/>

    <ImageButton
        android:id="@+id/plus2"
        android:contentDescription="@string/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/plus1"
        app:layout_constraintLeft_toRightOf="@id/plus1"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/plus"
        android:scaleType="fitCenter"
        android:background="@android:color/white"/>

    <ImageButton
        android:id="@+id/minus2"
        android:contentDescription="@string/minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/plus2"
        app:layout_constraintLeft_toRightOf="@id/minus1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50sp"
        app:srcCompat="@drawable/minus"
        android:scaleType="fitCenter"
        android:background="@android:color/white"/>

    <ImageButton
        android:id="@+id/plus3"
        android:contentDescription="@string/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/plus2"
        app:layout_constraintLeft_toRightOf="@id/plus2"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/plus"
        android:scaleType="fitCenter"
        android:background="@android:color/white"/>

    <ImageButton
        android:id="@+id/minus3"
        android:contentDescription="@string/minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/plus3"
        app:layout_constraintLeft_toRightOf="@id/minus2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50sp"
        app:srcCompat="@drawable/minus"
        android:scaleType="fitCenter"
        android:background="@android:color/white"/>

    <TextView
        android:id="@+id/num0"
        android:text="@string/start_text"
        android:textSize="30sp"
        android:layout_width="23dp"
        android:layout_height="32dp"
        android:contentDescription="@string/number"
        android:layout_marginBottom="5sp"
        app:layout_constraintBottom_toTopOf="@+id/minus0"
        app:layout_constraintLeft_toLeftOf="@+id/plus0"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/num1"
        android:text="@string/start_text"
        android:textSize="30sp"
        android:layout_width="23dp"
        android:layout_height="32dp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/number"
        app:layout_constraintBottom_toTopOf="@+id/minus1"
        app:layout_constraintLeft_toLeftOf="@+id/plus1"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/num2"
        android:text="@string/start_text"
        android:textSize="30sp"
        android:layout_width="23dp"
        android:layout_height="32dp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/number"
        app:layout_constraintBottom_toTopOf="@+id/minus2"
        app:layout_constraintLeft_toLeftOf="@+id/plus2"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/num3"
        android:text="@string/start_text"
        android:textSize="30sp"
        android:layout_width="23dp"
        android:layout_height="32dp"
        android:contentDescription="@string/number"
        android:layout_marginBottom="5sp"
        app:layout_constraintBottom_toTopOf="@+id/minus3"
        app:layout_constraintLeft_toLeftOf="@+id/plus3"
        android:layout_marginStart="15dp"/>

    <Button
        android:id="@+id/check_button"
        android:onClick="checkButtonAction"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginTop="80sp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/check"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/plus0"
        app:layout_constraintTop_toTopOf="@id/minus0" />

    <ImageView
        android:id="@+id/bull_image"
        android:contentDescription="@string/bull"
        app:srcCompat="@drawable/bull"
        android:scaleType="fitCenter"
        android:layout_width="120sp"
        android:layout_height="110sp"
        android:layout_marginTop="25sp"
        android:layout_marginStart="55sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bull"
        android:text="@string/start_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="55sp"
        app:layout_constraintTop_toTopOf="@id/bull_image"
        app:layout_constraintLeft_toRightOf="@id/bull_image" />

    <ImageView
        android:id="@+id/cow_image"
        android:contentDescription="@string/cow"
        app:srcCompat="@drawable/cow"
        android:scaleType="fitCenter"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="25sp"
        android:layout_marginStart="15sp"
        app:layout_constraintLeft_toLeftOf="@id/bull_image"
        app:layout_constraintTop_toBottomOf="@id/bull_image" />

    <TextView
        android:id="@+id/cow"
        android:text="@string/start_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="45sp"
        app:layout_constraintTop_toTopOf="@id/cow_image"
        app:layout_constraintLeft_toRightOf="@id/cow_image" />

    <TextView
        android:id="@+id/attempt_text"
        android:text="@string/attempt"
        android:textSize="17sp"
        android:contentDescription="@string/attempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginStart="30sp"
        app:layout_constraintLeft_toRightOf="@id/check_button"
        app:layout_constraintBottom_toBottomOf="@id/check_button" />

    <TextView
        android:id="@+id/attempt"
        android:text="@string/start_attempt"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        app:layout_constraintLeft_toRightOf="@id/attempt_text"
        app:layout_constraintBottom_toBottomOf="@id/attempt_text" />

</android.support.constraint.ConstraintLayout>
